2012-09-04 Alex Tutubalin <lexa@lexa.ru>
   * Backported improvements from LibRaw 0.14:
      - fast LJPEG decoder
      - OpenMP support for PPG and AHD interpolations
        and wavelet denoising
      - OpenMP support in raw2image_ex() call
      - LCMS1 compatibility patches
      - Better way to set compiler flags in Makefile.msvc
   * ABI changed, all programs using 0.15-Alpha2 should be
     recompiled!
   * LibRaw 0.15.0-Alpha3

2012-08-20 Alex Tutubalin <lexa@lexa.ru>
   * reverted (internal) changes to PhaseOne processing
   * subtract_black() works again
   * cropping works again (note: for Fuji SuperCCD files cropping is
     approximate)
   * color_data.channel_maximum[4] is replaced to color_data.data_maximum
     (max value from all image color channels). This value is calculated
     on subtract_black() call.
   * PhaseOne (compressed RAW): black level subtracted on postprocessing
     stage (or in raw2image() call). It requires addtional memory 
     allocation.
   * Fixed minor problem in lossy DNG tone curve generation
   * Imported dcraw 1.452:
     - Changed color data for Canon 1D-X camera
     - New camera support: Samsung NX-1000, Sony DSC-RX100

   * LibRaw 0.15.0-Alpha2

2012-07-03 Alex Tutubalin <lexa@lexa.ru>
    === LibRaw 0.15 (Alpha1) ===
    1) API Changes:
     =>  Removed, because no one uses it:
          * LibRaw::dcraw_document_mode_processing (and C-API call)
          * Data field imgdata.color.color_flags

     =>  Removed, because internal logic changed:
          * LIBRAW_DECODER_4COMPONENTS
            Now unpack() unpacks RAW data in only two possible formats:
             i. imgdata.rawdata.raw_image[] - flat buffer with bayer data
              (one value per pixel) with masked pixels.
             ii. imgdata.rawdata.color_image - 4-components array (similar
              to imgdata.image) with 3 or 4 components per pixel and
              without masked pixels.

      =>  Changed: