@@ -54,7 +54,7 @@ AC_ARG_ENABLE([jpeg],
 	esac],[jpeg=true])
 
 if test x$jpeg = xtrue; then
-        AC_CHECK_LIB([jpeg], [jpeg_mem_src],
+        AC_CHECK_LIB([jpeg], [jpeg_stdio_src],
                 [
                         AC_CHECK_HEADERS([jpeglib.h], [
                                 CPPFLAGS="$CPPFLAGS -DUSE_JPEG"
@@ -65,6 +65,16 @@ if test x$jpeg = xtrue; then
         )
 fi
 
+if test x$jpeg = xtrue; then
+        AC_CHECK_LIB([jpeg], [jpeg_mem_src],
+                [
+                        AC_CHECK_HEADERS([jpeglib.h], [
+                                CPPFLAGS="$CPPFLAGS -DUSE_JPEG8"
+                        ], AC_MSG_WARN([no jpeg8 headers found]))
+                ],
+                AC_MSG_WARN([libjpeg8 not found - disabling decoding JPEG data from memory buffer])
+        )
+fi
 
 # check for Jasper (JPEG2000) support
 AC_ARG_ENABLE([jasper],
