@@ -4734,11 +4734,35 @@ void CLASS border_interpolate (int border)
     }
 }
 
+void CLASS lin_interpolate_loop(int code[16][16][32],int size)
+{
+  int row;
+#if defined(LIBRAW_USE_OPENMP)
+#pragma omp parallel default(shared)
+#endif
+  for (row=1; row < height-1; row++)
+    {
+      int col,*ip;
+      ushort *pix;
+      for (col=1; col < width-1; col++) {
+        int i;
+        int sum[4];
+        pix = image[row*width+col];
+        ip = code[row % size][col % size];
+        memset (sum, 0, sizeof sum);
+        for (i=*ip++; i--; ip+=3)
+          sum[ip[2]] += pix[ip[0]] << ip[1];
+        for (i=colors; --i; ip+=2)
+          pix[ip[0]] = sum[ip[0]] * ip[1] >> 8;
+      }
+    }
+}
+
 void CLASS lin_interpolate()
 {
   int code[16][16][32], size=16, *ip, sum[4];
-  int f, c, i, x, y, row, col, shift, color;
-  ushort *pix;
+  int f, c, x, y, row, col, shift, color;
+
 
 #ifdef DCRAW_VERBOSE
   if (verbose) fprintf (stderr,_("Bilinear interpolation...\n"));
@@ -4774,16 +4798,7 @@ void CLASS lin_interpolate()
 #ifdef LIBRAW_LIBRARY_BUILD
   RUN_CALLBACK(LIBRAW_PROGRESS_INTERPOLATE,1,3);
 #endif
-  for (row=1; row < height-1; row++)
-    for (col=1; col < width-1; col++) {
-      pix = image[row*width+col];
-      ip = code[row % size][col % size];
-      memset (sum, 0, sizeof sum);
-      for (i=*ip++; i--; ip+=3)
-	sum[ip[2]] += pix[ip[0]] << ip[1];
-      for (i=colors; --i; ip+=2)
-	pix[ip[0]] = sum[ip[0]] * ip[1] >> 8;
-    }
+  lin_interpolate_loop(code,size);
 #ifdef LIBRAW_LIBRARY_BUILD
   RUN_CALLBACK(LIBRAW_PROGRESS_INTERPOLATE,2,3);
 #endif
