@@ -431,7 +431,7 @@ void * LibRaw_buffer_datastream::make_jas_stream()
 
 int LibRaw_buffer_datastream::jpeg_src(void *jpegdata)
 {
-#ifdef NO_JPEG
+#if defined(NO_JPEG) || !defined (USE_JPEG8)
   return -1;
 #else
   j_decompress_ptr cinfo = (j_decompress_ptr) jpegdata;
